force-app/main/default/objects/Approvers_Matrix__c/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <label>Approver Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>