force-app/main/default/objects/Approvers_Matrix__c/fields/Approver_User__c.field-meta.xml
<CustomField>
    <fullName>Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>