force-app/main/default/objects/Approvers_Matrix__c/fields/COO_Approver__c.field-meta.xml
<CustomField>
    <fullName>COO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix4</relationshipName>
    <type>Lookup</type>
</CustomField>