force-app/main/default/objects/Approvers_Matrix__c/fields/CPO_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as apart of story BIZ-47951
Approval story</description>
    <label>CPO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_MatrixItJl</relationshipName>
    <type>Lookup</type>
</CustomField>