force-app/main/default/objects/Approvers_Matrix__c/fields/CRO_Approver_ACV_10000__c.field-meta.xml
<CustomField>
    <fullName>CRO_Approver_ACV_10000__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRO Approver (ACV &gt;= 10000)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_MatrixPWOw</relationshipName>
    <type>Lookup</type>
</CustomField>