force-app/main/default/objects/Approvers_Matrix__c/fields/GearsetExternalId__c.field-meta.xml
<CustomField>
    <fullName>GearsetExternalId__c</fullName>
    <description>BIZ-71373 – Sets the Gearset External Id field to the record&#39;s Name via insert/update flow.</description>
    <externalId>true</externalId>
    <label>Gearset External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>