force-app/main/default/objects/Approvers_Matrix__c/fields/Industry_Sales_Lead_Approver__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sales_Lead_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Sales Lead Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers_Matrix2</relationshipName>
    <type>Lookup</type>
</CustomField>