force-app/main/default/objects/Approvers_Matrix__c/fields/Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Segment__c</fullName>
    <label>Sales Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>